# BottomUpAIandCellularAutomata

./: README  README.md
GameOfLife/: TODO  alife.bat  applet.html  applet2.html  applet3.html  applet4.html  applet_gadget.xml  applet_gadget2.xml  applet_gadget3.xml  applet_gadget4.xml  branch.sh  deployJava.js
GameOfLife/docs/: README.txt
GameOfLife/docs/articles/acm/: acmsmall-sample.aux  acmsmall-sample.bbl  acmsmall-sample.blg  acmsmall-sample.d  acmsmall-sample.dvi  acmsmall-sample.tex
GameOfLife/docs/articles/acm/output/: acmsmall-sample.bbl
GameOfLife/docs/articles/introlife/: NOTES  biology_in_code.tex  start_here_article_life.tex
GameOfLife/docs/articles/introlife_acm/: NOTES  acmsmall-sam.bib  acmsmall.cls  basic_biology.tex  biology_computing.tex  history.tex  java_scala.tex  object_model.tex  overview.tex  start-introlife-acm.tex  summary.tex
GameOfLife/docs/articles/simple/: acmsmall-sample.tex  acmsmall.bst  readme.txt
GameOfLife/docs/uml/: MainDiagram1.zargo
GameOfLife/lib/scala2.8.0/: README.txt
GameOfLife/literate/org/berlin2/bottomuplife/: CellSimulationMainApp.scala
GameOfLife/literate/org/berlin2/bottomuplife/code/: DNATranslationParser.scala  DNAWordOperations.scala
GameOfLife/src/haskell/: README  hslek.lkshs  hslek.lkshw
GameOfLife/src/haskell/haskell_basic/: README.txt  SimpleCells.hs
GameOfLife/src/haskell/haskell_basic/samples/: SimpleCells.hs
GameOfLife/src/haskell/test/: test.cabal
GameOfLife/src/haskell/test/src/: BaseLifeComponents.hs  Main.hs  Test2.hs
GameOfLife/src/main/scala/: log4j.properties
(+33 files in other folders)
